--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-grid-system": "^6.0.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
