--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-grid-system": "^6.0.7"
+    "react-grid-system": "^6.0.7",
+    "react-input-mask": "^2.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
