--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "ui kit for otp-bank",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production babel ./src/* --out-dir ./build --ignore '__tests__,*.spec.js' --copy-files",
+    "build": "NODE_ENV=production babel ./src/* --out-dir ./lib --ignore '__tests__,*.spec.js' --copy-files",
     "start": "styleguidist server",
     "dev": "styleguidist server",
-    "clear": "rm -rf build",
+    "clear": "rm -rf lib",
     "compile": "npm run clear && npm run build",
     "prepublishOnly": "npm run compile",
     "lint": "eslint src/**/*.js"
@@ -16,6 +16,9 @@
     "type": "git",
     "url": "http://gitlab.isb/ui/ui-kit.git"
   },
+  "files": [
+    "lib/"
+  ],
   "keywords": [
     "ui",
     "kit",
