--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ui kit for otp-bank",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production babel ./src/* --out-dir ./lib --ignore '__tests__,*.spec.js' --copy-files",
+    "build": "NODE_ENV=production babel ./src/ --out-dir ./lib --ignore '__tests__,*.spec.js' --copy-files",
     "start": "styleguidist server",
     "dev": "styleguidist server",
     "clear": "rm -rf lib",
