--- a/package.json
+++ b/package.json
@@ -59,6 +59,6 @@
     "webpack-cli": "^3.3.10"
   },
   "publishConfig": {
-    "registry": "http://srv-mvn-repo.isb/repository/npm-private/"
+    "registry": "http://npm.lending"
   }
 }
