--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-grid-system": "^6.0.7",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-input-mask": "^2.0.4"
   },
   "devDependencies": {
