--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "downshift": "^5.0.4",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0",
     "react-grid-system": "^6.0.7",
+    "react-highlight-words": "^0.16.0",
     "react-infinite-scroll-component": "^5.0.4",
-    "react-input-mask": "^2.0.4"
+    "react-input-mask": "^2.0.4",
+    "react-json-view": "^1.19.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
