--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-highlight-words": "^0.16.0",
     "react-infinite-scroll-component": "^5.0.4",
     "react-input-mask": "^2.0.4",
-    "react-json-view": "^1.19.1"
+    "react-json-view": "^1.19.1",
+    "react-textarea-autosize": "^7.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
