--- a/package.json
+++ b/package.json
@@ -32,10 +32,7 @@
     "classnames": "^2.2.6",
     "downshift": "^5.0.4",
     "moment": "^2.24.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.12.0",
     "react-grid-system": "^6.0.7",
     "react-highlight-words": "^0.16.0",
     "react-infinite-scroll-component": "^5.0.4",
@@ -63,7 +60,10 @@
     "style-loader": "^1.1.2",
     "sugarss": "^2.0.0",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.12.0"
   },
   "publishConfig": {
     "registry": "http://npm.lending"
