--- a/package.json
+++ b/package.json
@@ -30,40 +30,41 @@
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.6",
-    "downshift": "^5.0.4",
-    "moment": "^2.24.0",
+    "downshift": "^5.4.2",
+    "moment": "^2.26.0",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-grid-system": "^6.0.7",
+    "react-grid-system": "^6.4.2",
     "react-highlight-words": "^0.16.0",
     "react-infinite-scroll-component": "^5.0.4",
     "react-input-mask": "^2.0.4",
+    "react-input-range": "^1.3.0",
     "react-json-view": "^1.19.1",
     "react-textarea-autosize": "^7.1.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.4",
-    "@babel/core": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/preset-react": "^7.7.4",
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/preset-env": "^7.10.1",
+    "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.0.5",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react": "^7.20.0",
     "file-loader": "^5.0.2",
     "glob": "^7.1.6",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^1.19.1",
-    "react-styleguidist": "^10.2.1",
-    "style-loader": "^1.1.2",
-    "sugarss": "^2.0.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-styleguidist": "^10.2.1",
+    "style-loader": "^1.2.1",
+    "sugarss": "^2.0.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "publishConfig": {
     "registry": "http://npm.lending"
