--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
   "author": "VStepanov",
   "license": "ISC",
   "dependencies": {
-    "classnames": "^2.2.6",
     "downshift": "^5.4.2",
-    "moment": "^2.26.0",
     "react-grid-system": "^6.4.2",
     "react-highlight-words": "^0.16.0",
     "react-input-mask": "^2.0.4",
@@ -62,7 +60,9 @@
     "style-loader": "^1.2.1",
     "sugarss": "^2.0.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "moment": "^2.26.0",
+    "classnames": "^2.2.6"
   },
   "publishConfig": {
     "registry": "http://npm.lending"
