--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ui-kit
-  namespace: lending
+  namespace: tools
 spec:
   replicas: 1
   selector:
@@ -23,7 +23,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ui-kit
-  namespace: lending
+  namespace: tools
   labels:
     app: ui-kit
 spec:
