--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -18,6 +18,7 @@ spec:
           image: docker.lending/ui-kit
           ports:
             - containerPort: 80
+
 ---
 apiVersion: v1
 kind: Service
@@ -33,3 +34,50 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
+
+---
+kind: Middleware
+apiVersion: traefik.containo.us/v1alpha1
+metadata:
+  name: ui-kit-redirect
+  namespace: tools
+spec:
+  redirectScheme:
+    scheme: https
+    permanent: true
+
+---
+kind: IngressRoute
+apiVersion: traefik.containo.us/v1alpha1
+metadata:
+  name: ui-kit
+  namespace: tools
+spec:
+  entryPoints:
+    - web
+  routes:
+    - match: Host(`ui.lending.isb`)
+      kind: Rule
+      services:
+        - name: ui-kit
+          port: 80
+      middlewares:
+        - name: ui-kit-redirect
+
+---
+kind: IngressRoute
+apiVersion: traefik.containo.us/v1alpha1
+metadata:
+  name: ui-kit
+  namespace: tools
+spec:
+  entryPoints:
+    - web-secure
+  routes:
+    - match: Host(`ui.lending.isb`)
+      kind: Rule
+      services:
+        - name: ui-kit
+          port: 80
+  tls:
+    passthrough: true
