--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build:
   stage: build
   script:
     - export PROJECT_VERSION=$(head -1 version.txt)
-    - [ "$PROJECT_VERSION" != "$CI_COMMIT_TAG" ] && exit 1
+    - if [ "$PROJECT_VERSION" != "$CI_COMMIT_TAG" ] ; then exit 1; fi
     - npm publish
     - docker image build -t docker.lending/ui-kit:$PROJECT_VERSION-$CI_COMMIT_SHORT_SHA .
     - docker push docker.lending/ui-kit:$PROJECT_VERSION-$CI_COMMIT_SHORT_SHA
