--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - compile
+  - publish
   - build
   - deploy
 
@@ -23,12 +24,20 @@ compile:
       - version.txt
     expire_in: 1 day
 
-build:
-  stage: build
+publish:
+  image: node
+  stage: publish
   script:
     - export PROJECT_VERSION=$(head -1 version.txt)
     - if [ "$PROJECT_VERSION" != "$CI_COMMIT_TAG" ] ; then exit 1; fi
     - npm publish
+  only:
+    - tags
+
+build:
+  stage: build
+  script:
+    - export PROJECT_VERSION=$(head -1 version.txt
     - docker image build -t docker.lending/ui-kit:$PROJECT_VERSION-$CI_COMMIT_SHORT_SHA .
     - docker push docker.lending/ui-kit:$PROJECT_VERSION-$CI_COMMIT_SHORT_SHA
   only:
