--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ publish:
 build:
   stage: build
   script:
-    - export PROJECT_VERSION=$(head -1 version.txt
+    - export PROJECT_VERSION=$(head -1 version.txt)
     - docker image build -t docker.lending/ui-kit:$PROJECT_VERSION-$CI_COMMIT_SHORT_SHA .
     - docker push docker.lending/ui-kit:$PROJECT_VERSION-$CI_COMMIT_SHORT_SHA
   only:
