--- a/package.json
+++ b/package.json
@@ -44,11 +44,14 @@
     "@babel/preset-env": "^7.10.1",
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.0.5",
+    "babel-polyfill": "^6.26.0",
+    "classnames": "^2.2.6",
     "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
     "eslint-plugin-react": "^7.20.0",
     "file-loader": "^5.0.2",
     "glob": "^7.1.6",
+    "moment": "^2.26.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
@@ -60,9 +63,7 @@
     "style-loader": "^1.2.1",
     "sugarss": "^2.0.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "moment": "^2.26.0",
-    "classnames": "^2.2.6"
+    "webpack-cli": "^3.3.11"
   },
   "publishConfig": {
     "registry": "http://npm.lending"
