--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0",
     "react-styleguidist": "^10.2.1",
     "style-loader": "^1.2.1",
