--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "downshift": "^5.4.2",
     "react-grid-system": "^7.0.3",
     "react-highlight-words": "^0.16.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-input-mask": "^2.0.4",
     "react-input-range": "^1.3.0",
     "react-json-view": "^1.19.1",
