--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "ISC",
   "dependencies": {
     "downshift": "^5.4.2",
+    "imask": "^6.0.5",
     "react-grid-system": "^7.0.3",
     "react-highlight-words": "^0.16.0",
     "react-imask": "^6.0.5",
